--- a/index.html
+++ b/index.html
@@ -3,168 +3,160 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Delna AI | Workspace</title>
+    <title>Delna AI | Full Workspace</title>
     <style>
         :root {
-            --bg-dark: #0e1117;
+            --bg-color: #0e1117;
             --sidebar-bg: #17191e;
             --gemini-blue: #4285f4;
             --gemini-purple: #9b72cb;
-            --text-main: #e8eaed;
+            --accent-glow: #24c1e0;
         }
 
-        body {
-            background-color: var(--bg-dark);
-            color: var(--text-main);
-            font-family: 'Segoe UI', Roboto, sans-serif;
-            margin: 0; display: flex; height: 100vh; overflow: hidden;
+        body, html {
+            margin: 0; padding: 0; height: 100%;
+            background-color: var(--bg-color);
+            color: white; font-family: 'Segoe UI', sans-serif;
+            overflow: hidden;
         }
 
-        /* --- SIDEBAR (Folders & History) --- */
+        /* Full Layout */
+        .wrapper { display: flex; height: 100vh; width: 100vw; }
+
+        /* Sidebar - PC-yil side-il, Mobile-il hidden (Drawer) */
         .sidebar {
-            width: 260px;
-            background-color: var(--sidebar-bg);
+            width: 260px; background: var(--sidebar-bg);
             display: flex; flex-direction: column;
             padding: 20px; border-right: 1px solid rgba(255,255,255,0.05);
+            transition: transform 0.3s ease;
+            z-index: 100;
         }
 
-        .new-chat-btn {
-            background: rgba(255,255,255,0.05);
-            border: 1px solid rgba(255,255,255,0.1);
-            color: white; padding: 12px; border-radius: 12px;
-            text-align: left; cursor: pointer; margin-bottom: 30px;
+        @media (max-width: 768px) {
+            .sidebar { position: absolute; height: 100%; transform: translateX(-100%); }
+            .sidebar.open { transform: translateX(0); }
         }
 
-        .folder-section { flex-grow: 1; font-size: 14px; color: #9aa0a6; }
-        .folder-item { padding: 10px; cursor: pointer; border-radius: 8px; transition: 0.3s; }
-        .folder-item:hover { background: rgba(255,255,255,0.05); color: white; }
+        .menu-item { padding: 12px; margin: 5px 0; border-radius: 10px; cursor: pointer; transition: 0.3s; }
+        .menu-item:hover { background: rgba(255,255,255,0.05); }
 
-        /* --- MAIN CONTENT --- */
-        .main-content {
+        /* Main Workspace */
+        .main {
             flex-grow: 1; display: flex; flex-direction: column;
-            position: relative; align-items: center; justify-content: center;
+            position: relative; background: var(--bg-color);
         }
 
-        /* LOGO & LOADING (The Gemini Vibe) */
-        .logo-area { position: relative; width: 150px; height: 150px; margin-bottom: 20px; }
+        /* Header with Menu Button */
+        header { padding: 15px; display: flex; align-items: center; }
+        .menu-btn { font-size: 24px; cursor: pointer; margin-right: 15px; }
+
+        /* Chat Area */
+        #chat-area {
+            flex-grow: 1; display: flex; flex-direction: column;
+            align-items: center; justify-content: center;
+            padding: 20px; text-align: center;
+        }
+
+        /* LOGO & LOADING (The Real Vibe) */
+        .logo-box { position: relative; width: 120px; height: 120px; margin-bottom: 20px; }
         
         .shield-ring {
             position: absolute; width: 100%; height: 100%;
             border-radius: 50%; border: 3px solid transparent;
             border-left: 3px solid var(--gemini-blue);
             border-top: 3px solid var(--gemini-purple);
-            opacity: 0.3; animation: rotate 6s linear infinite;
+            animation: rotate 6s linear infinite;
         }
 
         .thinking .shield-ring {
-            animation: gemini-spin 1s cubic-bezier(0.45, 0.05, 0.55, 0.95) infinite;
-            opacity: 1; width: 110%; height: 110%;
+            animation: spin 1s cubic-bezier(0.45, 0.05, 0.55, 0.95) infinite;
             filter: drop-shadow(0 0 15px var(--gemini-blue));
+            width: 110%; height: 110%;
         }
 
-        @keyframes gemini-spin {
-            0% { transform: rotate(0deg) scale(1); }
-            100% { transform: rotate(360deg) scale(1); }
-        }
+        @keyframes spin { 100% { transform: rotate(360deg); } }
+        @keyframes rotate { 100% { transform: rotate(360deg); } }
 
         .shield-icon {
             position: absolute; top: 50%; left: 50%; transform: translate(-50%, -50%);
-            font-size: 50px; filter: drop-shadow(0 0 10px var(--gemini-blue));
+            font-size: 45px; filter: drop-shadow(0 0 10px var(--gemini-blue));
         }
 
-        /* --- CHAT DISPLAY --- */
-        #chat-window {
-            width: 80%; max-width: 800px; flex-grow: 1;
-            display: flex; flex-direction: column; justify-content: center;
-            text-align: center; overflow-y: auto;
-        }
-
-        .response-text { font-size: 18px; line-height: 1.6; color: #e8eaed; }
-
-        /* --- MESSAGE BAR (With Blue Shade/Glow) --- */
+        /* Message Bar (The Blue Glow) */
         .input-container {
-            width: 100%; max-width: 800px; padding: 40px;
-            display: flex; justify-content: center;
+            padding: 20px; display: flex; justify-content: center; width: 100%;
+            box-sizing: border-box;
         }
 
-        .input-wrapper {
-            width: 100%; position: relative;
-            background: #1e1f20; border-radius: 30px;
-            display: flex; align-items: center; padding: 5px 20px;
-            transition: 0.3s;
-            border: 1px solid transparent;
+        .input-pill {
+            width: 100%; max-width: 700px; background: #1e1f20;
+            border-radius: 30px; display: flex; align-items: center;
+            padding: 8px 20px; border: 1px solid transparent; transition: 0.3s;
         }
 
-        .input-wrapper:focus-within {
+        .input-pill:focus-within {
             border: 1px solid rgba(66, 133, 244, 0.5);
-            box-shadow: 0 0 20px rgba(66, 133, 244, 0.2); /* Blue Shade Glow */
+            box-shadow: 0 0 20px rgba(66, 133, 244, 0.15); /* Blue Shade Glow */
         }
 
-        .input-wrapper input {
-            background: none; border: none; color: white;
-            width: 100%; padding: 15px; outline: none; font-size: 16px;
+        input {
+            background: none; border: none; color: white; flex-grow: 1;
+            padding: 12px; outline: none; font-size: 16px;
         }
-
-        @keyframes rotate { from { transform: rotate(0deg); } to { transform: rotate(360deg); } }
     </style>
 </head>
 <body>
 
-    <div class="sidebar">
-        <button class="new-chat-btn">+ New Chat</button>
-        <div class="folder-section">
-            <p style="margin-left: 10px; font-weight: bold;">Recent folders</p>
-            <div class="folder-item">📂 Security Logs</div>
-            <div class="folder-item">📂 System Bypass</div>
-            <div class="folder-item">📂 Delna AI Core</div>
+    <div class="wrapper">
+        <div class="sidebar" id="sidebar">
+            <h3 style="color: #9aa0a6;">Delna AI</h3>
+            <div class="menu-item">📂 Security Logs</div>
+            <div class="menu-item">📂 System Bypass</div>
+            <div class="menu-item">📂 Delna AI Core</div>
+            <div style="margin-top: auto; font-size: 12px; color: #5f6368;">Version 2.0</div>
         </div>
-        <div style="font-size: 12px; color: #5f6368; padding: 10px;">Delna AI v2.0</div>
-    </div>
 
-    <div class="main-content">
-        <div id="chat-window">
-            <div class="logo-area" id="logoFrame">
-                <div class="shield-ring"></div>
-                <div class="shield-icon">🛡️</div>
+        <div class="main">
+            <header>
+                <div class="menu-btn" onclick="toggleSidebar()">☰</div>
+                <div style="letter-spacing: 2px; font-size: 14px;">DELNA AI</div>
+            </header>
+
+            <div id="chat-area">
+                <div class="logo-box" id="logoFrame">
+                    <div class="shield-ring"></div>
+                    <div class="shield-icon">🛡️</div>
+                </div>
+                <h2 id="msg-display">How can I help you, Commander?</h2>
             </div>
-            <h2 id="welcome-text">Hello, Commander. How can I protect your system today?</h2>
-            <div id="output-msg" class="response-text"></div>
-        </div>
 
-        <div class="input-container">
-            <div class="input-wrapper">
-                <input type="text" id="userInput" placeholder="Enter a prompt here" autocomplete="off">
+            <div class="input-container">
+                <div class="input-pill">
+                    <input type="text" id="userInput" placeholder="Enter a prompt here" autocomplete="off">
+                </div>
             </div>
         </div>
     </div>
 
     <script>
-        const input = document.getElementById('userInput');
-        const output = document.getElementById('output-msg');
-        const logoFrame = document.getElementById('logoFrame');
-        const welcome = document.getElementById('welcome-text');
-
-        function typeWriter(text, i = 0) {
-            if (i < text.length) {
-                output.innerHTML += text.charAt(i);
-                setTimeout(() => typeWriter(text, i + 1), 30);
-            } else {
-                logoFrame.classList.remove('thinking');
-            }
+        function toggleSidebar() {
+            document.getElementById('sidebar').classList.toggle('open');
         }
+
+        const input = document.getElementById('userInput');
+        const display = document.getElementById('msg-display');
+        const logoFrame = document.getElementById('logoFrame');
 
         input.addEventListener('keypress', function (e) {
             if (e.key === 'Enter') {
                 const val = input.value;
-                if (!val) return;
-                
                 input.value = '';
-                welcome.style.display = 'none'; // Hide welcome on first chat
-                output.innerHTML = '';
+                display.innerHTML = '';
                 logoFrame.classList.add('thinking');
 
                 setTimeout(() => {
-                    typeWriter("Delna AI: Analysis complete for '" + val + "'. Protection protocols are holding steady.");
+                    display.innerText = "Delna AI Analysis: " + val + " - Protocols are secure.";
+                    logoFrame.classList.remove('thinking');
                 }, 1500);
             }
         });
