--- a/index.html
+++ b/index.html
@@ -3,14 +3,14 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Delna AI | Full Workspace</title>
+    <title>Delna AI | Fixed Side-Animation</title>
     <style>
         :root {
             --bg-color: #0e1117;
             --sidebar-bg: #17191e;
             --gemini-blue: #4285f4;
             --gemini-purple: #9b72cb;
-            --accent-glow: #24c1e0;
+            --glow-shade: rgba(66, 133, 244, 0.3);
         }
 
         body, html {
@@ -20,106 +20,106 @@
             overflow: hidden;
         }
 
-        /* Full Layout */
-        .wrapper { display: flex; height: 100vh; width: 100vw; }
+        .wrapper { display: flex; height: 100vh; width: 100vw; position: relative; }
 
-        /* Sidebar - PC-yil side-il, Mobile-il hidden (Drawer) */
+        /* --- SIDEBAR --- */
         .sidebar {
-            width: 260px; background: var(--sidebar-bg);
+            width: 280px; background: var(--sidebar-bg);
             display: flex; flex-direction: column;
             padding: 20px; border-right: 1px solid rgba(255,255,255,0.05);
-            transition: transform 0.3s ease;
-            z-index: 100;
+            position: absolute; height: 100%; z-index: 1000;
+            transform: translateX(-100%); transition: transform 0.3s ease;
         }
+        .sidebar.open { transform: translateX(0); }
+        .sidebar-header { display: flex; justify-content: space-between; align-items: center; margin-bottom: 20px; }
+        .close-btn { font-size: 24px; cursor: pointer; color: #9aa0a6; }
+        .menu-item { padding: 12px; margin: 5px 0; border-radius: 10px; cursor: pointer; color: #bdc1c6; }
+        .menu-item:hover { background: rgba(255,255,255,0.05); color: white; }
 
-        @media (max-width: 768px) {
-            .sidebar { position: absolute; height: 100%; transform: translateX(-100%); }
-            .sidebar.open { transform: translateX(0); }
-        }
+        /* --- MAIN CONTENT --- */
+        .main { flex-grow: 1; display: flex; flex-direction: column; position: relative; width: 100%; }
+        header { padding: 15px 20px; display: flex; align-items: center; background: var(--bg-color); }
+        .menu-icon { font-size: 24px; cursor: pointer; margin-right: 15px; }
 
-        .menu-item { padding: 12px; margin: 5px 0; border-radius: 10px; cursor: pointer; transition: 0.3s; }
-        .menu-item:hover { background: rgba(255,255,255,0.05); }
-
-        /* Main Workspace */
-        .main {
-            flex-grow: 1; display: flex; flex-direction: column;
-            position: relative; background: var(--bg-color);
-        }
-
-        /* Header with Menu Button */
-        header { padding: 15px; display: flex; align-items: center; }
-        .menu-btn { font-size: 24px; cursor: pointer; margin-right: 15px; }
-
-        /* Chat Area */
+        /* --- LOGO & SIDE ORBIT ANIMATION (FIXED) --- */
         #chat-area {
             flex-grow: 1; display: flex; flex-direction: column;
             align-items: center; justify-content: center;
             padding: 20px; text-align: center;
         }
 
-        /* LOGO & LOADING (The Real Vibe) */
-        .logo-box { position: relative; width: 120px; height: 120px; margin-bottom: 20px; }
-        
+        .logo-box { position: relative; width: 140px; height: 140px; margin-bottom: 30px; }
+
+        /* Normal state: Very subtle ring */
         .shield-ring {
-            position: absolute; width: 100%; height: 100%;
-            border-radius: 50%; border: 3px solid transparent;
-            border-left: 3px solid var(--gemini-blue);
-            border-top: 3px solid var(--gemini-purple);
-            animation: rotate 6s linear infinite;
+            position: absolute; 
+            width: 100%; height: 100%;
+            border-radius: 50%;
+            border: 2px solid rgba(255, 255, 255, 0.05);
+            transition: all 0.5s ease;
         }
 
+        /* Side-Orbit Loading: Only one side glows and rotates */
         .thinking .shield-ring {
-            animation: spin 1s cubic-bezier(0.45, 0.05, 0.55, 0.95) infinite;
+            width: 115%; height: 115%;
+            border: 3px solid transparent;
+            border-left: 4px solid var(--gemini-blue); /* Side loading only */
+            border-top: 4px solid var(--gemini-purple);
             filter: drop-shadow(0 0 15px var(--gemini-blue));
-            width: 110%; height: 110%;
+            animation: side-spin 1s cubic-bezier(0.4, 0, 0.2, 1) infinite;
         }
 
-        @keyframes spin { 100% { transform: rotate(360deg); } }
-        @keyframes rotate { 100% { transform: rotate(360deg); } }
+        @keyframes side-spin {
+            0% { transform: rotate(0deg) scale(1); }
+            50% { transform: rotate(180deg) scale(1.1); }
+            100% { transform: rotate(360deg) scale(1); }
+        }
 
         .shield-icon {
             position: absolute; top: 50%; left: 50%; transform: translate(-50%, -50%);
-            font-size: 45px; filter: drop-shadow(0 0 10px var(--gemini-blue));
+            font-size: 55px; filter: drop-shadow(0 0 10px var(--gemini-blue));
+            z-index: 5;
         }
 
-        /* Message Bar (The Blue Glow) */
-        .input-container {
-            padding: 20px; display: flex; justify-content: center; width: 100%;
-            box-sizing: border-box;
+        /* --- INPUT BAR --- */
+        .input-wrapper {
+            padding: 20px 20px 40px;
+            display: flex; justify-content: center; width: 100%; box-sizing: border-box;
         }
-
         .input-pill {
             width: 100%; max-width: 700px; background: #1e1f20;
             border-radius: 30px; display: flex; align-items: center;
-            padding: 8px 20px; border: 1px solid transparent; transition: 0.3s;
+            padding: 10px 25px; border: 1px solid transparent; 
+            transition: all 0.3s ease;
         }
-
         .input-pill:focus-within {
-            border: 1px solid rgba(66, 133, 244, 0.5);
-            box-shadow: 0 0 20px rgba(66, 133, 244, 0.15); /* Blue Shade Glow */
+            border: 1px solid var(--gemini-blue);
+            box-shadow: 0 0 25px var(--glow-shade);
         }
-
         input {
             background: none; border: none; color: white; flex-grow: 1;
-            padding: 12px; outline: none; font-size: 16px;
+            padding: 12px 0; outline: none; font-size: 16px;
         }
+        #msg-display { font-size: 18px; color: #e8eaed; max-width: 85%; line-height: 1.6; margin-top: 10px; }
     </style>
 </head>
 <body>
 
     <div class="wrapper">
         <div class="sidebar" id="sidebar">
-            <h3 style="color: #9aa0a6;">Delna AI</h3>
+            <div class="sidebar-header">
+                <span style="font-weight: bold; color: white;">Recent folders</span>
+                <span class="close-btn" onclick="toggleSidebar()">✕</span>
+            </div>
             <div class="menu-item">📂 Security Logs</div>
             <div class="menu-item">📂 System Bypass</div>
             <div class="menu-item">📂 Delna AI Core</div>
-            <div style="margin-top: auto; font-size: 12px; color: #5f6368;">Version 2.0</div>
         </div>
 
         <div class="main">
             <header>
-                <div class="menu-btn" onclick="toggleSidebar()">☰</div>
-                <div style="letter-spacing: 2px; font-size: 14px;">DELNA AI</div>
+                <div class="menu-icon" onclick="toggleSidebar()">☰</div>
+                <div style="font-size: 14px; letter-spacing: 2px;">DELNA AI</div>
             </header>
 
             <div id="chat-area">
@@ -127,12 +127,12 @@
                     <div class="shield-ring"></div>
                     <div class="shield-icon">🛡️</div>
                 </div>
-                <h2 id="msg-display">How can I help you, Commander?</h2>
+                <h2 id="msg-display">Hello, Commander.</h2>
             </div>
 
-            <div class="input-container">
+            <div class="input-wrapper">
                 <div class="input-pill">
-                    <input type="text" id="userInput" placeholder="Enter a prompt here" autocomplete="off">
+                    <input type="text" id="userInput" placeholder="Ask Delna AI..." autocomplete="off">
                 </div>
             </div>
         </div>
@@ -150,12 +150,13 @@
         input.addEventListener('keypress', function (e) {
             if (e.key === 'Enter') {
                 const val = input.value;
+                if (!val) return;
                 input.value = '';
                 display.innerHTML = '';
                 logoFrame.classList.add('thinking');
 
                 setTimeout(() => {
-                    display.innerText = "Delna AI Analysis: " + val + " - Protocols are secure.";
+                    display.innerText = "Processing request for: " + val;
                     logoFrame.classList.remove('thinking');
                 }, 1500);
             }
