--- a/index.html
+++ b/index.html
@@ -3,14 +3,14 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Delna AI | Fixed Side-Animation</title>
+    <title>Delna AI | Gemini Style</title>
     <style>
         :root {
             --bg-color: #0e1117;
             --sidebar-bg: #17191e;
             --gemini-blue: #4285f4;
             --gemini-purple: #9b72cb;
-            --glow-shade: rgba(66, 133, 244, 0.3);
+            --gemini-cyan: #24c1e0;
         }
 
         body, html {
@@ -33,74 +33,67 @@
         .sidebar.open { transform: translateX(0); }
         .sidebar-header { display: flex; justify-content: space-between; align-items: center; margin-bottom: 20px; }
         .close-btn { font-size: 24px; cursor: pointer; color: #9aa0a6; }
-        .menu-item { padding: 12px; margin: 5px 0; border-radius: 10px; cursor: pointer; color: #bdc1c6; }
-        .menu-item:hover { background: rgba(255,255,255,0.05); color: white; }
 
         /* --- MAIN CONTENT --- */
-        .main { flex-grow: 1; display: flex; flex-direction: column; position: relative; width: 100%; }
-        header { padding: 15px 20px; display: flex; align-items: center; background: var(--bg-color); }
+        .main { flex-grow: 1; display: flex; flex-direction: column; width: 100%; }
+        header { padding: 15px 20px; display: flex; align-items: center; }
         .menu-icon { font-size: 24px; cursor: pointer; margin-right: 15px; }
 
-        /* --- LOGO & SIDE ORBIT ANIMATION (FIXED) --- */
+        /* --- CHAT AREA (Side Loading Style) --- */
         #chat-area {
             flex-grow: 1; display: flex; flex-direction: column;
-            align-items: center; justify-content: center;
-            padding: 20px; text-align: center;
+            padding: 40px 20px; overflow-y: auto;
         }
 
-        .logo-box { position: relative; width: 140px; height: 140px; margin-bottom: 30px; }
-
-        /* Normal state: Very subtle ring */
-        .shield-ring {
-            position: absolute; 
-            width: 100%; height: 100%;
-            border-radius: 50%;
-            border: 2px solid rgba(255, 255, 255, 0.05);
-            transition: all 0.5s ease;
+        .response-container {
+            display: flex; align-items: flex-start; gap: 15px;
+            max-width: 800px; margin: 0 auto; width: 100%;
         }
 
-        /* Side-Orbit Loading: Only one side glows and rotates */
-        .thinking .shield-ring {
-            width: 115%; height: 115%;
-            border: 3px solid transparent;
-            border-left: 4px solid var(--gemini-blue); /* Side loading only */
-            border-top: 4px solid var(--gemini-purple);
-            filter: drop-shadow(0 0 15px var(--gemini-blue));
-            animation: side-spin 1s cubic-bezier(0.4, 0, 0.2, 1) infinite;
+        /* The Tiny Side Loading Orbit (Like Gemini) */
+        .ai-icon-fixed {
+            width: 30px; height: 30px; border-radius: 50%;
+            position: relative; flex-shrink: 0; margin-top: 5px;
+            background: rgba(255,255,255,0.05);
         }
 
-        @keyframes side-spin {
-            0% { transform: rotate(0deg) scale(1); }
-            50% { transform: rotate(180deg) scale(1.1); }
-            100% { transform: rotate(360deg) scale(1); }
+        .thinking .ai-icon-fixed::after {
+            content: ''; position: absolute; top: -2px; left: -2px;
+            right: -2px; bottom: -2px; border-radius: 50%;
+            border: 2px solid transparent;
+            border-left: 2px solid var(--gemini-blue);
+            border-top: 2px solid var(--gemini-purple);
+            animation: mini-spin 0.8s linear infinite;
         }
 
-        .shield-icon {
-            position: absolute; top: 50%; left: 50%; transform: translate(-50%, -50%);
-            font-size: 55px; filter: drop-shadow(0 0 10px var(--gemini-blue));
-            z-index: 5;
-        }
+        @keyframes mini-spin { 100% { transform: rotate(360deg); } }
 
-        /* --- INPUT BAR --- */
+        #msg-display { font-size: 17px; line-height: 1.6; color: #e8eaed; }
+
+        /* --- FLOATING MESSAGE BOX (Mugalil & Glowing) --- */
         .input-wrapper {
-            padding: 20px 20px 40px;
-            display: flex; justify-content: center; width: 100%; box-sizing: border-box;
+            padding: 0 20px 80px; /* Message box kurach mugalil aakkan */
+            display: flex; justify-content: center;
         }
+
         .input-pill {
             width: 100%; max-width: 700px; background: #1e1f20;
-            border-radius: 30px; display: flex; align-items: center;
-            padding: 10px 25px; border: 1px solid transparent; 
-            transition: all 0.3s ease;
+            border-radius: 32px; display: flex; align-items: center;
+            padding: 12px 24px; border: 1px solid transparent; 
+            transition: 0.3s cubic-bezier(0.4, 0, 0.2, 1);
+            box-shadow: 0 4px 20px rgba(0,0,0,0.4);
         }
+
         .input-pill:focus-within {
-            border: 1px solid var(--gemini-blue);
-            box-shadow: 0 0 25px var(--glow-shade);
+            border: 1px solid rgba(66, 133, 244, 0.6);
+            box-shadow: 0 0 30px rgba(66, 133, 244, 0.25); /* Stronger Blue Glow */
+            background: #232526;
         }
+
         input {
             background: none; border: none; color: white; flex-grow: 1;
-            padding: 12px 0; outline: none; font-size: 16px;
+            padding: 8px 0; outline: none; font-size: 16px;
         }
-        #msg-display { font-size: 18px; color: #e8eaed; max-width: 85%; line-height: 1.6; margin-top: 10px; }
     </style>
 </head>
 <body>
@@ -108,12 +101,11 @@
     <div class="wrapper">
         <div class="sidebar" id="sidebar">
             <div class="sidebar-header">
-                <span style="font-weight: bold; color: white;">Recent folders</span>
+                <span style="font-weight: bold;">Recent folders</span>
                 <span class="close-btn" onclick="toggleSidebar()">✕</span>
             </div>
-            <div class="menu-item">📂 Security Logs</div>
-            <div class="menu-item">📂 System Bypass</div>
-            <div class="menu-item">📂 Delna AI Core</div>
+            <div style="padding: 10px 0; color: #bdc1c6;">📂 Security Logs</div>
+            <div style="padding: 10px 0; color: #bdc1c6;">📂 Delna AI Core</div>
         </div>
 
         <div class="main">
@@ -123,11 +115,10 @@
             </header>
 
             <div id="chat-area">
-                <div class="logo-box" id="logoFrame">
-                    <div class="shield-ring"></div>
-                    <div class="shield-icon">🛡️</div>
+                <div class="response-container" id="responseWrap">
+                    <div class="ai-icon-fixed" id="loadingIcon"></div>
+                    <div id="msg-display">How can I help you, Commander?</div>
                 </div>
-                <h2 id="msg-display">Hello, Commander.</h2>
             </div>
 
             <div class="input-wrapper">
@@ -145,7 +136,7 @@
 
         const input = document.getElementById('userInput');
         const display = document.getElementById('msg-display');
-        const logoFrame = document.getElementById('logoFrame');
+        const loader = document.getElementById('responseWrap');
 
         input.addEventListener('keypress', function (e) {
             if (e.key === 'Enter') {
@@ -153,11 +144,11 @@
                 if (!val) return;
                 input.value = '';
                 display.innerHTML = '';
-                logoFrame.classList.add('thinking');
+                loader.classList.add('thinking');
 
                 setTimeout(() => {
-                    display.innerText = "Processing request for: " + val;
-                    logoFrame.classList.remove('thinking');
+                    display.innerText = "Delna AI: Analyzed '" + val + "'. All systems stable.";
+                    loader.classList.remove('thinking');
                 }, 1500);
             }
         });
