--- a/index.html
+++ b/index.html
@@ -3,62 +3,74 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0, maximum-scale=1.0, user-scalable=no">
-    <title>Delna AI | Final Fix</title>
+    <title>Delna AI | Smooth Interface</title>
     <style>
         :root {
             --bg-color: #0e1117;
             --sidebar-bg: #17191e;
             --gemini-blue: #4285f4;
             --gemini-purple: #9b72cb;
-            --input-bg: #1e1f20;
+            --overlay-bg: rgba(0, 0, 0, 0.5);
         }
 
-        /* Keyboard-friendly Dynamic Height Fix */
         body, html {
-            margin: 0; padding: 0; 
-            height: 100vh; height: 100dvh; 
+            margin: 0; padding: 0;
+            height: 100dvh; /* Dynamic height fix */
             background-color: var(--bg-color);
             color: white; font-family: 'Segoe UI', sans-serif;
+            display: flex; flex-direction: column;
             overflow: hidden;
         }
 
-        .wrapper { display: flex; height: 100%; width: 100vw; position: relative; }
+        /* --- OVERLAY (Sidebar thurakkumpol back-il varunath) --- */
+        .overlay {
+            position: fixed; top: 0; left: 0; width: 100%; height: 100%;
+            background: var(--overlay-bg);
+            backdrop-filter: blur(4px);
+            opacity: 0; visibility: hidden;
+            transition: 0.3s ease; z-index: 900;
+        }
+        .overlay.active { opacity: 1; visibility: visible; }
 
-        /* --- SIDEBAR --- */
+        /* --- SIDEBAR ANIMATION --- */
         .sidebar {
             width: 280px; background: var(--sidebar-bg);
             display: flex; flex-direction: column;
             padding: 20px; border-right: 1px solid rgba(255,255,255,0.05);
-            position: absolute; height: 100%; z-index: 1000;
-            transform: translateX(-100%); transition: 0.3s ease;
+            position: fixed; height: 100%; z-index: 1000;
+            transform: translateX(-100%); 
+            transition: transform 0.4s cubic-bezier(0.4, 0, 0.2, 1);
+            box-shadow: 10px 0 30px rgba(0,0,0,0.5);
         }
         .sidebar.open { transform: translateX(0); }
-        .sidebar-header { display: flex; justify-content: space-between; align-items: center; margin-bottom: 20px; }
-        .close-btn { font-size: 24px; cursor: pointer; color: #9aa0a6; }
 
-        /* --- MAIN CONTENT --- */
-        .main { flex-grow: 1; display: flex; flex-direction: column; width: 100%; }
-        header { padding: 15px 20px; display: flex; align-items: center; flex-shrink: 0; }
-        .menu-icon { font-size: 24px; cursor: pointer; }
+        .sidebar-header { display: flex; justify-content: space-between; align-items: center; margin-bottom: 25px; }
+        .close-btn { font-size: 24px; cursor: pointer; color: #9aa0a6; padding: 5px; }
 
-        /* --- CHAT AREA (Side Loading Only) --- */
+        .menu-item { 
+            padding: 12px; margin: 8px 0; border-radius: 12px; 
+            cursor: pointer; color: #bdc1c6; transition: 0.2s;
+            display: flex; align-items: center; gap: 10px;
+        }
+        .menu-item:hover { background: rgba(255,255,255,0.08); color: white; }
+
+        /* --- MAIN UI --- */
+        header { padding: 15px 20px; display: flex; align-items: center; background: var(--bg-color); flex-shrink: 0; }
+        .menu-icon { font-size: 24px; cursor: pointer; padding: 5px; }
+
         #chat-area {
             flex-grow: 1; display: flex; flex-direction: column;
-            padding: 20px; overflow-y: auto;
+            padding: 20px; overflow-y: auto; justify-content: center;
         }
 
-        .chat-row {
-            display: flex; align-items: flex-start; gap: 12px;
-            width: 100%; max-width: 800px; margin: 0 auto;
-        }
+        .chat-row { display: flex; align-items: flex-start; gap: 12px; width: 100%; max-width: 800px; margin: 0 auto; }
 
-        /* Tiny Side Orbit (Marked in your screenshot) */
+        /* Side Loading Orbit */
         .ai-avatar {
-            width: 28px; height: 28px; border-radius: 50%;
+            width: 30px; height: 30px; border-radius: 50%;
             background: rgba(255,255,255,0.1); flex-shrink: 0;
             position: relative; margin-top: 4px;
         }
-
         .thinking .ai-avatar::after {
             content: ''; position: absolute; top: -3px; left: -3px;
             right: -3px; bottom: -3px; border-radius: 50%;
@@ -67,72 +79,64 @@
             border-top: 2px solid var(--gemini-purple);
             animation: orbit 0.8s linear infinite;
         }
-
         @keyframes orbit { 100% { transform: rotate(360deg); } }
 
         #msg-display { font-size: 17px; line-height: 1.6; color: #e8eaed; }
 
-        /* --- FLOATING INPUT BAR (Position Fix) --- */
-        .input-container {
-            padding: 10px 15px 40px; /* Thazhe ninnu ketti nirthan */
-            display: flex; justify-content: center;
-            flex-shrink: 0; /* Keyboard varumbol squeeze aavathiriukan */
-        }
-
+        /* --- INPUT BAR --- */
+        .input-container { padding: 10px 15px 40px; display: flex; justify-content: center; flex-shrink: 0; }
         .input-pill {
-            width: 100%; max-width: 700px; background: var(--input-bg);
-            border-radius: 28px; display: flex; align-items: center;
-            padding: 10px 20px; border: 1px solid transparent;
-            box-shadow: 0 4px 15px rgba(0,0,0,0.3);
-            transition: 0.3s;
+            width: 100%; max-width: 700px; background: #1e1f20;
+            border-radius: 30px; display: flex; align-items: center;
+            padding: 8px 22px; border: 1px solid transparent; transition: 0.3s;
         }
-
         .input-pill:focus-within {
             border: 1px solid var(--gemini-blue);
-            box-shadow: 0 0 20px rgba(66, 133, 244, 0.3);
+            box-shadow: 0 0 20px rgba(66, 133, 244, 0.2);
         }
-
-        input {
-            background: none; border: none; color: white;
-            width: 100%; padding: 10px; outline: none; font-size: 16px;
-        }
+        input { background: none; border: none; color: white; width: 100%; padding: 12px; outline: none; font-size: 16px; }
     </style>
 </head>
 <body>
 
-    <div class="wrapper">
-        <div class="sidebar" id="sidebar">
-            <div class="sidebar-header">
-                <span style="font-weight: bold;">Folders</span>
-                <span class="close-btn" onclick="toggleSidebar()">✕</span>
-            </div>
-            <div style="padding: 10px; color: #9aa0a6;">📂 Security Logs</div>
-            <div style="padding: 10px; color: #9aa0a6;">📂 Delna AI Core</div>
+    <div class="overlay" id="overlay" onclick="toggleSidebar()"></div>
+
+    <div class="sidebar" id="sidebar">
+        <div class="sidebar-header">
+            <span style="font-weight: bold; letter-spacing: 1px;">Recent Folders</span>
+            <span class="close-btn" onclick="toggleSidebar()">✕</span>
         </div>
+        <div class="menu-item">📂 Security Logs</div>
+        <div class="menu-item">📂 Delna AI Core</div>
+        <div class="menu-item">📂 System Bypass</div>
+        <div style="margin-top: auto; font-size: 11px; color: #5f6368; padding: 10px;">Delna AI v2.8</div>
+    </div>
 
-        <div class="main">
-            <header>
-                <div class="menu-icon" onclick="toggleSidebar()">☰</div>
-                <div style="margin-left: 15px; font-size: 14px; letter-spacing: 2px;">DELNA AI</div>
-            </header>
+    <header>
+        <div class="menu-icon" onclick="toggleSidebar()">☰</div>
+        <div style="margin-left: 15px; font-size: 14px; letter-spacing: 2px; font-weight: bold;">DELNA AI</div>
+    </header>
 
-            <div id="chat-area">
-                <div class="chat-row" id="chatRow">
-                    <div class="ai-avatar"></div>
-                    <div id="msg-display">Hello, Commander. How can I help?</div>
-                </div>
-            </div>
+    <div id="chat-area">
+        <div class="chat-row" id="chatRow">
+            <div class="ai-avatar"></div>
+            <div id="msg-display">Hello, Commander. How can I assist you?</div>
+        </div>
+    </div>
 
-            <div class="input-container">
-                <div class="input-pill">
-                    <input type="text" id="userInput" placeholder="Ask Delna AI..." autocomplete="off">
-                </div>
-            </div>
+    <div class="input-container">
+        <div class="input-pill">
+            <input type="text" id="userInput" placeholder="Ask Delna AI..." autocomplete="off">
         </div>
     </div>
 
     <script>
-        function toggleSidebar() { document.getElementById('sidebar').classList.toggle('open'); }
+        function toggleSidebar() {
+            const sb = document.getElementById('sidebar');
+            const overlay = document.getElementById('overlay');
+            sb.classList.toggle('open');
+            overlay.classList.toggle('active');
+        }
 
         const input = document.getElementById('userInput');
         const display = document.getElementById('msg-display');
@@ -147,7 +151,7 @@
                 chatRow.classList.add('thinking');
 
                 setTimeout(() => {
-                    display.innerText = "Delna AI Analysis complete for your request.";
+                    display.innerText = "Delna AI Analysis complete. All systems optimized.";
                     chatRow.classList.remove('thinking');
                 }, 1500);
             }
